Add compiled files to repo

--- a/tsconfig-aot.json
+++ b/tsconfig-aot.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-	"outDir": "build/package",
+	"outDir": "./",
     "target": "es5",
     "lib": ["es6", "dom"],
     "module": "commonjs",
